--- a/Ziggi/Ziggi.vcxproj.filters
+++ b/Ziggi/Ziggi.vcxproj.filters
@@ -37,6 +37,12 @@
     <ClInclude Include="src\Ziggi\Events\MouseEvent.h">
       <Filter>Ziggi\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ziggi\Layer.h">
+      <Filter>Ziggi</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ziggi\LayerStack.h">
+      <Filter>Ziggi</Filter>
+    </ClInclude>
     <ClInclude Include="src\Ziggi\Log.h">
       <Filter>Ziggi</Filter>
     </ClInclude>
@@ -50,6 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ziggi\Application.cpp">
+      <Filter>Ziggi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ziggi\LayerStack.cpp">
+      <Filter>Ziggi</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ziggi\Layer.cpp">
       <Filter>Ziggi</Filter>
     </ClCompile>
     <ClCompile Include="src\Ziggi\Log.cpp">
